Bug fixes and new features
